--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
   <color name="light_text">#606060</color>
   <color name="transparent">#00000000</color>
   <color name="toolbar_color">@color/primary</color>
+  <color name="container_background">@color/white</color>
+  <color name="dialog_background">@color/white</color>
 
   <color name="global_primary_activity_background">@color/secondary</color>
   <color name="global_primary_text">@color/primary</color>
