--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -6,8 +6,8 @@
     <!-- Customize your theme here. -->
     <item name="android:colorPrimary">@color/primary</item>
     <item name="android:colorPrimaryDark">@color/primary_dark</item>
-    <item name="android:colorAccent">@color/secondary</item>
-    <item name="android:colorControlNormal">@color/secondary</item>
+    <item name="android:colorAccent">@color/accent</item>
+    <item name="android:colorControlNormal">@color/accent</item>
   </style>
 
 </resources>
