--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
 
   <style name="AppTheme.Base"
          parent="Theme.AppCompat.NoActionBar">
-    <item name="android:textColorPrimary">@color/secondary</item>
+    <item name="android:textColorPrimary">@color/accent</item>
     <item name="android:textViewStyle">@style/AppTheme.TextView.Primary</item>
     <item name="android:editTextStyle">@style/AppTheme.EditText.Default</item>
     <item name="android:buttonStyle">@style/AppTheme.Button.Default</item>
@@ -15,8 +15,8 @@
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
-    <item name="colorAccent">@color/secondary</item>
-    <item name="colorControlNormal">@color/secondary</item>
+    <item name="colorAccent">@color/accent</item>
+    <item name="colorControlNormal">@color/accent</item>
   </style>
 
   <!-- TextView -->
